examples/test/testpolicy1413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1413
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key28: value42
      key48: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value25
      podSelector:
        matchLabels:
          key30: value27
          key39: value42
